nginx-example/baz-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baz-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: baz
  template:
    metadata:
      labels:
        app: baz
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
      volumes:
        - name: html
          configMap:
            name: baz-config
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-baz
spec:
  selector:
    app: baz
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
